--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -117,7 +117,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test on Linux/OS X system\n"
+      "Test on Windows system\n"
      ]
     }
    ],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,33 +138,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[36], [44, 42, 46, 54], [42, 40, 41]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "s1 = [[36,44],[42,46,54],[42,40,41]]\n",
-    "s1[1].insert(0,s1[0].pop())\n",
-    "print(s1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'B1': {'B1': 0.0, 'B2': 1.0, 'B3': 0.0, 'Bend': 0.0}, 'B2': {'B1': 0, 'B2': 0.7272727272727273, 'B3': 0.2727272727272727, 'Bend': 0.0}, 'B3': {'B1': 0.0, 'B2': 0.0, 'B3': 0.7, 'Bend': 0.3}, 'Bend': {'B1': 0.0, 'B2': 0.0, 'B3': 0.0, 'Bend': 0}}\n"
+      "[[[37, 36, 32, 26, 26], [25, 23, 22, 21, 39], [48, 60, 70, 74, 77]], [[50, 50, 49, 47, 39], [39, 38, 38, 50, 56], [61, 67, 67, 67, 67]], [[45, 43, 44, 43, 40], [35, 36, 37, 39, 45], [60, 68, 66, 72, 72, 75]]]\n",
+      "[[[37], [36, 32, 26, 26, 25, 23, 22, 21, 39, 48], [60, 70, 74, 77]], [[50, 50, 49, 47, 39, 39], [38, 38, 50], [56, 61, 67, 67, 67, 67]], [[45, 43, 44, 43, 40], [35, 36, 37, 39, 45], [60, 68, 66, 72, 72, 75]]]\n",
+      "[[[37], [36, 32, 26, 26, 25, 23, 22, 21, 39, 48], [60, 70, 74, 77]], [[50, 50, 49, 47], [39, 39, 38, 38, 50], [56, 61, 67, 67, 67, 67]], [[45, 43, 44, 43], [40, 35, 36, 37, 39, 45], [60, 68, 66, 72, 72, 75]]]\n",
+      "{'B1': {'B1': 0.6666666666666667, 'B2': 0.3333333333333333, 'B3': 0.0, 'Bend': 0.0}, 'B2': {'B1': 0, 'B2': 0.8571428571428572, 'B3': 0.14285714285714285, 'Bend': 0.0}, 'B3': {'B1': 0.0, 'B2': 0.0, 'B3': 0.8125, 'Bend': 0.1875}, 'Bend': {'B1': 0.0, 'B2': 0.0, 'B3': 0.0, 'Bend': 0}}\n"
      ]
     }
    ],
@@ -177,17 +161,17 @@
     "    flattened = np.array(data)\n",
     "    return flattened.mean(), flattened.std()\n",
     "\n",
-    "s1 = [[36,44],[42,46,54],[42,40,41]]\n",
-    "s2 = [[52,56],[62,68,65],[43,52,55]]\n",
-    "s3 = [[49,44],[60,56],[59,60,55,47]]\n",
+    "# s1 = [[36,44],[52,56],[49,44]]\n",
+    "# s2 = [[42,46,54],[62,68,65],[60,56]]\n",
+    "# s3 = [[42,40,41],[43,52,55],[59,60,55,47]]\n",
     "\n",
-    "# s1 = [[47,39,32],[34,36,42],[42,42,34,25]]\n",
-    "# s2 = [[35,35,43],[46,52,52],[56,49,45]]\n",
-    "# s3 = [[28,35,46],[46,48,43],[43,40]]\n",
+    "s1 = [[47,39,32],[34,36,42],[42,42,34,25]]\n",
+    "s2 = [[35,35,43],[46,52,52],[56,49,45]]\n",
+    "s3 = [[28,35,46],[46,48,43],[43,40]]\n",
     "\n",
-    "# s1 = [[7, 36, 32, 26, 26],[25, 23, 22, 21, 39],[48, 60, 70, 74, 77]]\n",
-    "# s2 = [[50, 50, 49, 47, 39],[39, 38, 38, 50, 56],[61, 67, 67, 67, 67]]\n",
-    "# s3 = [[45, 43, 44, 43, 40],[35, 36, 37, 39, 45],[60, 68, 66, 72, 72, 75]]\n",
+    "s1 = [[37, 36, 32, 26, 26],[25, 23, 22, 21, 39],[48, 60, 70, 74, 77]]\n",
+    "s2 = [[50, 50, 49, 47, 39],[39, 38, 38, 50, 56],[61, 67, 67, 67, 67]]\n",
+    "s3 = [[45, 43, 44, 43, 40],[35, 36, 37, 39, 45],[60, 68, 66, 72, 72, 75]]\n",
     "\n",
     "\n",
     "s = [s1, s2, s3] \n",
@@ -223,20 +207,34 @@
     "    s3_mean, s3_std = stats(s3_list)\n",
     "    \n",
     "    for k in range(len(s)):\n",
-    "        for i in range(len(s[k][0])-1,0,-1):\n",
-    "            if abs(s[k][0][i]/s1_std) > abs(s[k][0][i]/s2_std):\n",
+    "        while len(s[k][0]) > 1:\n",
+    "            if abs(s[k][0][-1]-s1_mean)/s1_std > abs(s[k][0][-1]-s2_mean)/s2_std:\n",
     "                s[k][1].insert(0,s[k][0].pop())\n",
     "                not_converge = True\n",
     "            else:\n",
     "                break\n",
+    "                \n",
+    "        while len(s[k][1]) > 1:\n",
+    "            if abs(s[k][1][0]-s2_mean)/s2_std > abs(s[k][1][0]-s1_mean)/s1_std:\n",
+    "                s[k][0].append(s[k][1].pop(0))\n",
+    "                not_converge = True\n",
+    "            else:\n",
+    "                break\n",
     "    \n",
-    "        for i in range(len(s[k][1])-1,0,-1):\n",
-    "            if abs(s[k][1][i]/s2_std) > abs(s[k][1][i]/s3_std):\n",
+    "        while len(s[k][1]) > 1:\n",
+    "            if abs(s[k][1][-1]-s2_mean)/s2_std > abs(s[k][1][-1]-s3_mean)/s3_std:\n",
     "                s[k][2].insert(0,s[k][1].pop())\n",
     "                not_converge = True\n",
     "            else:\n",
-    "                break    \n",
-    "    \n",
+    "                break\n",
+    "        \n",
+    "        while len(s[k][2]) > 1:\n",
+    "            if abs(s[k][2][0]-s3_mean)/s3_std > abs(s[k][2][0]-s2_mean)/s2_std:\n",
+    "                s[k][1].append(s[k][2].pop(0))\n",
+    "                not_converge = True\n",
+    "            else:\n",
+    "                break\n",
+    "\n",
     "print(b_tp)\n",
     "# print(s1_mean,s1_std)\n",
     "# print(s2_mean,s2_std)\n",
@@ -245,20 +243,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NotImplementedError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-3afcdeb93883>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    117\u001b[0m \u001b[0;31m########## DON'T WRITE ANY CODE OUTSIDE THE FUNCTION! ################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    118\u001b[0m \u001b[0;31m##### CODE BELOW IS USED FOR RUNNING LOCAL TEST DON'T MODIFY IT ######\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 119\u001b[0;31m \u001b[0mtests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTestPart1a\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_prior\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpart_1_a\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    120\u001b[0m \u001b[0mtests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTestPart1a\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_b_emission\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpart_1_a\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    121\u001b[0m \u001b[0mtests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTestPart1a\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_c_emission\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpart_1_a\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Spring2021/CS 6601 TA/assignment_6/hmm_submission_test.py\u001b[0m in \u001b[0;36mtest_prior\u001b[0;34m(self, part_1_a)\u001b[0m\n\u001b[1;32m     21\u001b[0m         (b_prior_probs, b_transition_probs, b_emission_paras,\n\u001b[1;32m     22\u001b[0m         \u001b[0mc_prior_probs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc_transition_probs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc_emission_paras\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m         h_prior_probs, h_transition_probs, h_emission_paras) = part_1_a()\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0mb_prior\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb_prior_probs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-3-3afcdeb93883>\u001b[0m in \u001b[0;36mpart_1_a\u001b[0;34m()\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m     \u001b[0;31m# TODO: complete this function.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 47\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     48\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m     \u001b[0;34m\"\"\"Word BUY\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "UnitTest test_prior passed successfully!\n",
+      "UnitTest test_b_emission passed successfully!\n",
+      "UnitTest test_c_emission passed successfully!\n",
+      "UnitTest test_h_emission passed successfully!\n",
+      "UnitTest test_b_transition passed successfully!\n",
+      "UnitTest test_c_transition passed successfully!\n",
+      "UnitTest test_h_transition passed successfully!\n"
      ]
     }
    ],
@@ -309,69 +307,68 @@
     "    \"\"\"\n",
     "\n",
     "    # TODO: complete this function.\n",
-    "    raise NotImplementedError()\n",
     "\n",
     "    \"\"\"Word BUY\"\"\"\n",
     "    b_prior_probs = {\n",
-    "        'B1': 1/3,\n",
+    "        'B1': 0.333,\n",
     "        'B2': 0.,\n",
     "        'B3': 0.,\n",
     "        'Bend': 0.,\n",
     "    }\n",
     "    b_transition_probs = {\n",
     "        'B1': {'B1': 0.625, 'B2': 0.375, 'B3': 0., 'Bend': 0.},\n",
-    "        'B2': {'B1': 0, 'B2': 0.625, 'B3': 3/8, 'Bend': 0.},\n",
-    "        'B3': {'B1': 0., 'B2': 0., 'B3': 5/8, 'Bend': 3/8},\n",
-    "        'Bend': {'B1': 0., 'B2': 0., 'B3': 0., 'Bend': 1.0},\n",
+    "        'B2': {'B1': 0., 'B2': 0.625, 'B3': 0.375, 'Bend': 0.},\n",
+    "        'B3': {'B1': 0., 'B2': 0., 'B3': 0.625, 'Bend': 0.375},\n",
+    "        'Bend': {'B1': 0., 'B2': 0., 'B3': 0., 'Bend': 1.},\n",
     "    }\n",
     "    # Parameters for end state is not required\n",
     "    b_emission_paras = {\n",
-    "        'B1': (None, None),\n",
-    "        'B2': (None, None),\n",
-    "        'B3': (None, None),\n",
+    "        'B1': (41.750, 2.773),\n",
+    "        'B2': (58.625, 5.678),\n",
+    "        'B3': (53.125, 5.418),\n",
     "        'Bend': (None, None)\n",
     "    }\n",
     "\n",
     "    \"\"\"Word CAR\"\"\"\n",
     "    c_prior_probs = {\n",
-    "        'C1': 0.,\n",
+    "        'C1': 0.333,\n",
     "        'C2': 0.,\n",
     "        'C3': 0.,\n",
     "        'Cend': 0.,\n",
     "    }\n",
     "    c_transition_probs = {\n",
-    "        'C1': {'C1': 0., 'C2': 0., 'C3': 0., 'Cend': 0.},\n",
-    "        'C2': {'C1': 0., 'C2': 0., 'C3': 0., 'Cend': 0.},\n",
-    "        'C3': {'C1': 0., 'C2': 0., 'C3': 0., 'Cend': 0.},\n",
-    "        'Cend': {'C1': 0., 'C2': 0., 'C3': 0., 'Cend': 0.},\n",
+    "        'C1': {'C1': 0.667, 'C2': 0.333, 'C3': 0., 'Cend': 0.},\n",
+    "        'C2': {'C1': 0., 'C2': 0., 'C3': 1.0, 'Cend': 0.},\n",
+    "        'C3': {'C1': 0., 'C2': 0., 'C3': 0.800, 'Cend': 0.200},\n",
+    "        'Cend': {'C1': 0., 'C2': 0., 'C3': 0., 'Cend': 1.},\n",
     "    }\n",
     "    # Parameters for end state is not required\n",
     "    c_emission_paras = {\n",
-    "        'C1': (None, None),\n",
-    "        'C2': (None, None),\n",
-    "        'C3': (None, None),\n",
+    "        'C1': (35.667, 4.899),\n",
+    "        'C2': (43.667, 1.700),\n",
+    "        'C3': (44.200, 7.341),\n",
     "        'Cend': (None, None)\n",
     "    }\n",
     "\n",
     "    \"\"\"Word HOUSE\"\"\"\n",
     "    h_prior_probs = {\n",
-    "        'H1': 0.,\n",
+    "        'H1': 0.333,\n",
     "        'H2': 0.,\n",
     "        'H3': 0.,\n",
     "        'Hend': 0.,\n",
     "    }\n",
     "    # Probability of a state changing to another state.\n",
     "    h_transition_probs = {\n",
-    "        'H1': {'H1': 0., 'H2': 0., 'H3': 0., 'Hend': 0.},\n",
-    "        'H2': {'H1': 0., 'H2': 0., 'H3': 0., 'Hend': 0.},\n",
-    "        'H3': {'H1': 0., 'H2': 0., 'H3': 0., 'Hend': 0.},\n",
-    "        'Hend': {'H1': 0., 'H2': 0., 'H3': 0., 'Hend': 0.},\n",
+    "        'H1': {'H1': 0.667, 'H2': 0.333, 'H3': 0., 'Hend': 0.},\n",
+    "        'H2': {'H1': 0., 'H2': 0.857, 'H3': 0.143, 'Hend': 0.},\n",
+    "        'H3': {'H1': 0., 'H2': 0., 'H3': 0.813, 'Hend': 0.187},\n",
+    "        'Hend': {'H1': 0., 'H2': 0., 'H3': 0., 'Hend': 1.},\n",
     "    }\n",
     "    # Parameters for end state is not required\n",
     "    h_emission_paras = {\n",
-    "        'H1': (None, None),\n",
-    "        'H2': (None, None),\n",
-    "        'H3': (None, None),\n",
+    "        'H1': (45.333, 3.972),\n",
+    "        'H2': (34.952, 8.127),\n",
+    "        'H3': (67.438, 5.733),\n",
     "        'Hend': (None, None)\n",
     "    }\n",
     "\n",
