--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,9 +486,14 @@
     "        emission probabilities.\n",
     "    \"\"\"\n",
     "    \n",
-    "    # TODO: complete this function.\n",
-    "    raise NotImplementedError()\n",
-    "\n",
+    "    T1 = np.zeros((len(states),len(evidence_vector)))\n",
+    "    T2 = np.zeros((len(states),len(evidence_vector)))\n",
+    "    \n",
+    "    for i in range(len(states)):\n",
+    "        T1[i,0] = prior_probs[states[i]]*gaussian_prob(evidence_vector[0],emission_paras(states[i]))\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    sequence = []\n",
     "    probability = 0.0\n",
     "\n",
