--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,9 +455,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "UnitTest test_viterbi_case1 passed successfully!\n",
+      "UnitTest test_viterbi_case2 passed successfully!\n",
+      "UnitTest test_viterbi_case3 passed successfully!\n",
+      "UnitTest test_viterbi_realsample1 passed successfully!\n",
+      "UnitTest test_viterbi_realsample2 passed successfully!\n",
+      "UnitTest test_viterbi_realsample3 passed successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "#export\n",
     "def viterbi(evidence_vector, states, prior_probs,\n",
@@ -485,18 +498,38 @@
     "        You are required to use the function gaussian_prob to compute the\n",
     "        emission probabilities.\n",
     "    \"\"\"\n",
-    "    \n",
+    "    if not evidence_vector:\n",
+    "        return (None, 0)\n",
+    "\n",
     "    T1 = np.zeros((len(states),len(evidence_vector)))\n",
     "    T2 = np.zeros((len(states),len(evidence_vector)))\n",
     "    \n",
     "    for i in range(len(states)):\n",
-    "        T1[i,0] = prior_probs[states[i]]*gaussian_prob(evidence_vector[0],emission_paras(states[i]))\n",
+    "\n",
+    "        T1[i,0] = prior_probs[states[i]]*gaussian_prob(evidence_vector[0],emission_paras[states[i]])\n",
     "    \n",
-    "    \n",
+    "    for i in range(1, len(evidence_vector)):\n",
+    "        for j in range(len(states)):\n",
+    "            temp = 0\n",
+    "            max_idx = -1\n",
+    "            state_range = range(j//4*4, j//4*4+4)\n",
+    "            for k in state_range:\n",
+    "                temp = T1[k,i-1]*transition_probs[states[k]][states[j]]*gaussian_prob(evidence_vector[i],emission_paras[states[j]])\n",
+    "                if temp > T1[j,i]:\n",
+    "                    T1[j,i] = temp\n",
+    "                    T2[j,i] = k\n",
     "    \n",
     "    sequence = []\n",
-    "    probability = 0.0\n",
+    "    probability = np.max(T1[:,-1])\n",
+    "    \n",
+    "    curr_idx = np.argmax(T1[:,-1],axis=0)\n",
     "\n",
+    "    for i in range(len(evidence_vector),0,-1):\n",
+    "        sequence.append(states[curr_idx])\n",
+    "        if i > 1:\n",
+    "            curr_idx = int(T2[curr_idx,i-1])\n",
+    "    sequence.reverse()\n",
+    "    \n",
     "    return sequence, probability\n",
     "\n",
     "########## DON'T WRITE ANY CODE OUTSIDE THE FUNCTION! ################\n",
@@ -546,9 +579,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "UnitTest test_prior passed successfully!\n",
+      "UnitTest test_b_emission passed successfully!\n",
+      "UnitTest test_c_emission passed successfully!\n",
+      "UnitTest test_h_emission passed successfully!\n",
+      "UnitTest test_b_transition passed successfully!\n",
+      "UnitTest test_c_transition passed successfully!\n",
+      "UnitTest test_h_transition passed successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "#export\n",
     "def part_2_a():\n",
@@ -560,68 +607,65 @@
     "    emission probabilities.\n",
     "    \"\"\"\n",
     "\n",
-    "     # TODO: complete this function.\n",
-    "    raise NotImplementedError()\n",
-    "\n",
     "    \"\"\"Word BUY\"\"\"\n",
     "    b_prior_probs = {\n",
-    "        'B1': 0.,\n",
+    "        'B1': 0.333,\n",
     "        'B2': 0.,\n",
     "        'B3': 0.,\n",
     "        'Bend': 0.,\n",
     "    }\n",
     "    # example: {'B1': {'B1' : (right-hand Y, left-hand Y), ... }\n",
     "    b_transition_probs = {\n",
-    "        'B1': {'B1': (0., 0.), 'B2': (0., 0.), 'B3': (0., 0.), 'Bend': (0., 0.)},\n",
-    "        'B2': {'B1': (0., 0.), 'B2': (0., 0.), 'B3': (0., 0.), 'Bend': (0., 0.)},\n",
-    "        'B3': {'B1': (0., 0.), 'B2': (0., 0.), 'B3': (0., 0.), 'Bend': (0., 0.)},\n",
-    "        'Bend': {'B1': (0., 0.), 'B2': (0., 0.), 'B3': (0., 0.), 'Bend': (0., 0.)},\n",
+    "        'B1': {'B1': (0.625, 0.700), 'B2': (0.375, 0.300), 'B3': (0., 0.), 'Bend': (0., 0.)},\n",
+    "        'B2': {'B1': (0., 0.), 'B2': (0.625, 0.050), 'B3': (0.375, 0.950), 'Bend': (0., 0.)},\n",
+    "        'B3': {'B1': (0., 0.), 'B2': (0., 0.), 'B3': (0.625, 0.727), 'Bend': (0.125, 0.091), 'C1': (0.125,0.091), 'H1': (0.125,0.091)},\n",
+    "        'Bend': {'B1': (0., 0.), 'B2': (0., 0.), 'B3': (0., 0.), 'Bend': (1., 1.)},\n",
     "    }\n",
     "    # example: {'B1': [(right-mean, right-std), (left-mean, left-std)] ...}\n",
     "    b_emission_paras = {\n",
-    "        'B1': [(None, None), (None, None)],\n",
-    "        'B2': [(None, None), (None, None)],\n",
-    "        'B3': [(None, None), (None, None)],\n",
+    "        'B1': [(41.750, 2.773), (108.200, 17.314)],\n",
+    "        'B2': [(58.625, 5.678), (78.670, 1.886)],\n",
+    "        'B3': [(53.125, 5.418), (64.182, 5.573)],\n",
     "        'Bend': [(None, None), (None, None)]\n",
     "    }\n",
     "\n",
     "    \"\"\"Word Car\"\"\"\n",
     "    c_prior_probs = {\n",
-    "        'C1': 0.,\n",
+    "        'C1': 0.333,\n",
     "        'C2': 0.,\n",
     "        'C3': 0.,\n",
     "        'Cend': 0.,\n",
     "    }\n",
     "    c_transition_probs = {\n",
-    "        'C1': {'C1': (0., 0.), 'C2': (0., 0.), 'C3': (0., 0.), 'Cend': (0., 0.)},\n",
-    "        'C2': {'C1': (0., 0.), 'C2': (0., 0.), 'C3': (0., 0.), 'Cend': (0., 0.)},\n",
-    "        'C3': {'C1': (0., 0.), 'C2': (0., 0.), 'C3': (0., 0.), 'Cend': (0., 0.)},\n",
-    "        'Cend': {'C1': (0., 0.), 'C2': (0., 0.), 'C3': (0., 0.), 'Cend': (0., 0.)},\n",
+    "        'C1': {'C1': (0.667, 0.700), 'C2': (0.333, 0.300), 'C3': (0., 0.), 'Cend': (0., 0.)},\n",
+    "        'C2': {'C1': (0., 0.), 'C2': (0., 0.625), 'C3': (1.000, 0.375), 'Cend': (0., 0.)},\n",
+    "        'C3': {'C1': (0., 0.), 'C2': (0., 0.), 'C3': (0.800, 0.625), 'Cend': (0.200, 0.375)},\n",
+    "        'Cend': {'C1': (0., 0.), 'C2': (0., 0.), 'C3': (0., 0.), 'Cend': (1., 1.)},\n",
     "    }\n",
     "    c_emission_paras = {\n",
-    "        'C1': [(None, None), (None, None)],\n",
-    "        'C2': [(None, None), (None, None)],\n",
-    "        'C3': [(None, None), (None, None)],\n",
+    "        'C1': [(35.667, 4.899), (56.300, 10.659)],\n",
+    "        'C2': [(43.667, 1.700), (37.110, 4.306)],\n",
+    "        'C3': [(44.200, 7.341), (50.000, 7.826)],\n",
     "        'Cend': [(None, None), (None, None)]\n",
     "    }\n",
     "\n",
     "    \"\"\"Word HOUSE\"\"\"\n",
     "    h_prior_probs = {\n",
-    "        'H1': 0.,\n",
+    "        'H1': 0.333,\n",
     "        'H2': 0.,\n",
     "        'H3': 0.,\n",
     "        'Hend': 0.,\n",
     "    }\n",
     "    h_transition_probs = {\n",
-    "        'H1': {'H1': (0., 0.), 'H2': (0., 0.), 'H3': (0., 0.), 'Hend': (0., 0.)},\n",
-    "        'H2': {'H1': (0., 0.), 'H2': (0., 0.), 'H3': (0., 0.), 'Hend': (0., 0.)},\n",
-    "        'H3': {'H1': (0., 0.), 'H2': (0., 0.), 'H3': (0., 0.), 'Hend': (0., 0.)},\n",
-    "        'Hend': {'H1': (0., 0.), 'H2': (0., 0.), 'H3': (0., 0.), 'Hend': (0., 0.)},\n",
+    "        'H1': {'H1': (0.667, 0.700), 'H2': (0.333, 0.300), 'H3': (0., 0.), 'Hend': (0., 0.)},\n",
+    "        'H2': {'H1': (0., 0.), 'H2': (0.857, 0.842), 'H3': (0.143, 0.158), 'Hend': (0., 0.)},\n",
+    "        'H3': {'H1': (0., 0.), 'H2': (0., 0.), 'H3': (0.813, 0.824), 'Hend': (0.187, 0.176)},\n",
+    "        'Hend': {'H1': (0., 0.), 'H2': (0., 0.), 'H3': (0., 0.), 'Hend': (1., 1.)},\n",
     "    }\n",
     "    h_emission_paras = {\n",
-    "        'H1': [(None, None), (None, None)],\n",
-    "        'H2': [(None, None), (None, None)],\n",
-    "        'H3': [(None, None), (None, None)],\n",
+    "        'H1': [(45.333, 3.972), (53.600, 7.392)],\n",
+    "        'H2': [(34.952, 8.127), (37.168, 8.875)],\n",
+    "        'H3': [(67.438, 5.733), (74.176, 8.347)],\n",
     "        'Hend': [(None, None), (None, None)]\n",
     "    }\n",
     "\n",
