--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -109,7 +109,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "scrolled": true,
+    "scrolled": false,
     "tags": []
    },
    "outputs": [
@@ -138,20 +138,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[37, 36, 32, 26, 26], [25, 23, 22, 21, 39], [48, 60, 70, 74, 77]], [[50, 50, 49, 47, 39], [39, 38, 38, 50, 56], [61, 67, 67, 67, 67]], [[45, 43, 44, 43, 40], [35, 36, 37, 39, 45], [60, 68, 66, 72, 72, 75]]]\n",
-      "[[[37], [36, 32, 26, 26, 25, 23, 22, 21, 39, 48], [60, 70, 74, 77]], [[50, 50, 49, 47, 39, 39], [38, 38, 50], [56, 61, 67, 67, 67, 67]], [[45, 43, 44, 43, 40], [35, 36, 37, 39, 45], [60, 68, 66, 72, 72, 75]]]\n",
-      "[[[37], [36, 32, 26, 26, 25, 23, 22, 21, 39, 48], [60, 70, 74, 77]], [[50, 50, 49, 47], [39, 39, 38, 38, 50], [56, 61, 67, 67, 67, 67]], [[45, 43, 44, 43], [40, 35, 36, 37, 39, 45], [60, 68, 66, 72, 72, 75]]]\n",
-      "{'B1': {'B1': 0.6666666666666667, 'B2': 0.3333333333333333, 'B3': 0.0, 'Bend': 0.0}, 'B2': {'B1': 0, 'B2': 0.8571428571428572, 'B3': 0.14285714285714285, 'Bend': 0.0}, 'B3': {'B1': 0.0, 'B2': 0.0, 'B3': 0.8125, 'Bend': 0.1875}, 'Bend': {'B1': 0.0, 'B2': 0.0, 'B3': 0.0, 'Bend': 0}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def stats(data):\n",
     "#     flattened = list()\n",
@@ -243,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -512,9 +501,13 @@
     "        for j in range(len(states)):\n",
     "            temp = 0\n",
     "            max_idx = -1\n",
-    "            state_range = range(j//4*4, j//4*4+4)\n",
+    "            state_range = range(len(states))\n",
     "            for k in state_range:\n",
-    "                temp = T1[k,i-1]*transition_probs[states[k]][states[j]]*gaussian_prob(evidence_vector[i],emission_paras[states[j]])\n",
+    "                if states[j] in transition_probs[states[k]]:\n",
+    "                    temp = T1[k,i-1]*transition_probs[states[k]][states[j]]*gaussian_prob(evidence_vector[i],emission_paras[states[j]])\n",
+    "                else:\n",
+    "                    temp = 0\n",
+    "                \n",
     "                if temp > T1[j,i]:\n",
     "                    T1[j,i] = temp\n",
     "                    T2[j,i] = k\n",
@@ -530,7 +523,10 @@
     "            curr_idx = int(T2[curr_idx,i-1])\n",
     "    sequence.reverse()\n",
     "    \n",
-    "    return sequence, probability\n",
+    "    if probability == 0:\n",
+    "        return (None, 0)\n",
+    "    else:\n",
+    "        return sequence, probability\n",
     "\n",
     "########## DON'T WRITE ANY CODE OUTSIDE THE FUNCTION! ################\n",
     "##### CODE BELOW IS USED FOR RUNNING LOCAL TEST DON'T MODIFY IT ######\n",
@@ -579,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +635,7 @@
     "    c_transition_probs = {\n",
     "        'C1': {'C1': (0.667, 0.700), 'C2': (0.333, 0.300), 'C3': (0., 0.), 'Cend': (0., 0.)},\n",
     "        'C2': {'C1': (0., 0.), 'C2': (0., 0.625), 'C3': (1.000, 0.375), 'Cend': (0., 0.)},\n",
-    "        'C3': {'C1': (0., 0.), 'C2': (0., 0.), 'C3': (0.800, 0.625), 'Cend': (0.200, 0.375)},\n",
+    "        'C3': {'C1': (0., 0.), 'C2': (0., 0.), 'C3': (0.800, 0.625), 'Cend': (0.067, 0.125), 'B1': (0.067,0.125), 'H1': (0.067,0.125)},\n",
     "        'Cend': {'C1': (0., 0.), 'C2': (0., 0.), 'C3': (0., 0.), 'Cend': (1., 1.)},\n",
     "    }\n",
     "    c_emission_paras = {\n",
@@ -659,7 +655,7 @@
     "    h_transition_probs = {\n",
     "        'H1': {'H1': (0.667, 0.700), 'H2': (0.333, 0.300), 'H3': (0., 0.), 'Hend': (0., 0.)},\n",
     "        'H2': {'H1': (0., 0.), 'H2': (0.857, 0.842), 'H3': (0.143, 0.158), 'Hend': (0., 0.)},\n",
-    "        'H3': {'H1': (0., 0.), 'H2': (0., 0.), 'H3': (0.813, 0.824), 'Hend': (0.187, 0.176)},\n",
+    "        'H3': {'H1': (0., 0.), 'H2': (0., 0.), 'H3': (0.813, 0.824), 'Hend': (0.062, 0.059), 'B1': (0.062, 0.059), 'C1': (0.062, 0.059)},\n",
     "        'Hend': {'H1': (0., 0.), 'H2': (0., 0.), 'H3': (0., 0.), 'Hend': (1., 1.)},\n",
     "    }\n",
     "    h_emission_paras = {\n",
@@ -701,9 +697,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "UnitTest test_viterbi_case1 passed successfully!\n",
+      "['B1'] 1.180783625705486e-05\n",
+      "UnitTest test_viterbi_case2 passed successfully!\n",
+      "['C1'] 0.00021318951875226567\n",
+      "UnitTest test_viterbi_case3 passed successfully!\n",
+      "['B1', 'B1', 'B2', 'B2', 'B3', 'B3', 'B3'] 4.170485262895785e-27\n",
+      "UnitTest test_viterbi_realsample1 passed successfully!\n",
+      "['H1', 'H1', 'H1', 'H1', 'H1', 'H1', 'H1', 'H1', 'H1'] 5.8010590691764785e-28\n",
+      "UnitTest test_viterbi_realsample2 passed successfully!\n",
+      "['C1', 'C1', 'C1', 'C1', 'C1', 'C1', 'C1', 'C1', 'C1', 'C1'] 1.1773994120537428e-34\n",
+      "UnitTest test_viterbi_realsample3 passed successfully!\n",
+      "['B1', 'B2', 'B3', 'B3', 'B3', 'B3', 'B3', 'B3', 'H1', 'H1', 'H1', 'H1', 'H2', 'H3', 'H3', 'H3', 'H3', 'H3', 'H3', 'H3', 'H3'] 3.8385994612197256e-75\n",
+      "UnitTest test_viterbi_phrase1 passed successfully!\n",
+      "['B1', 'B1', 'B1', 'B1', 'B1', 'B1', 'B2', 'B3', 'B3', 'B3', 'C1', 'C1', 'C1', 'C1', 'C1', 'C1', 'C1', 'C1', 'C1'] 8.313871821593213e-71\n",
+      "UnitTest test_viterbi_phrase2 passed successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "#export\n",
     "def multidimensional_viterbi(evidence_vector, states, prior_probs,\n",
@@ -714,13 +732,46 @@
     "    Evidence vector is a list of tuples where the first element of each tuple is the right \n",
     "    hand coordinate and the second element is the left hand coordinate.\n",
     "    \"\"\"\n",
-    "    # TODO: complete this function.\n",
-    "    raise NotImplementedError()\n",
+    "    if not evidence_vector:\n",
+    "        return (None, 0)\n",
     "\n",
+    "    T1 = np.zeros((len(states),len(evidence_vector)))\n",
+    "    T2 = np.zeros((len(states),len(evidence_vector)))\n",
+    "    \n",
+    "    for i in range(len(states)):\n",
+    "        \n",
+    "        T1[i,0] = prior_probs[states[i]]*gaussian_prob(evidence_vector[0][0],emission_paras[states[i]][0])*gaussian_prob(evidence_vector[0][1],emission_paras[states[i]][1])\n",
+    "    \n",
+    "    for i in range(1, len(evidence_vector)):\n",
+    "        for j in range(len(states)):\n",
+    "            temp = 0\n",
+    "            max_idx = -1\n",
+    "            state_range = range(len(states))\n",
+    "            for k in state_range:\n",
+    "                if states[j] in transition_probs[states[k]]:\n",
+    "                    temp = T1[k,i-1]*transition_probs[states[k]][states[j]][0]*transition_probs[states[k]][states[j]][1]*gaussian_prob(evidence_vector[i][0],emission_paras[states[j]][0])*gaussian_prob(evidence_vector[i][1],emission_paras[states[j]][1])\n",
+    "                else:\n",
+    "                    temp = 0\n",
+    "                \n",
+    "                if temp > T1[j,i]:\n",
+    "                    T1[j,i] = temp\n",
+    "                    T2[j,i] = k\n",
+    "                    \n",
     "    sequence = []\n",
-    "    probability = 0.0\n",
-    "\n",
-    "    return sequence, probability\n",
+    "    probability = np.max(T1[:,-1])\n",
+    "    \n",
+    "    curr_idx = np.argmax(T1[:,-1],axis=0)\n",
+    "    \n",
+    "    for i in range(len(evidence_vector),0,-1):\n",
+    "        sequence.append(states[curr_idx])\n",
+    "        if i > 1:\n",
+    "            curr_idx = int(T2[curr_idx,i-1])\n",
+    "    sequence.reverse()\n",
+    "    print(sequence, probability)\n",
+    "    if probability == 0:\n",
+    "        return (None, 0)\n",
+    "    else:\n",
+    "        return sequence, probability\n",
     "\n",
     "########## DON'T WRITE ANY CODE OUTSIDE THE FUNCTION! ################\n",
     "##### CODE BELOW IS USED FOR RUNNING LOCAL TEST DON'T MODIFY IT ######\n",
